--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .terraform.lock.hcl
 terraform.tfstate
 terraform.tfstate.backup
+infra/*.tfvars
 aws-lambda-env
 # Lambda zip artifacts
 lambda/**/*.zip
